# opnsense-admin-mcp

./: .gitignore  README.md  install.sh  pyproject.toml  pyrightconfig.json
src/: __init__.py  config.py  db.py  diagnose.py  mcp_server.py  models.py  opnsense.py  ssh.py
src/services/: __init__.py  dhcp.py  discovery.py  dns.py  health.py  status.py  utils.py  vlan.py
